# quat

./: CMakeLists.txt  README.md
cmake/: Findgtest.cmake
include/: quaternion.hpp
test/: quaternion_test.cpp
